apps/rke2/nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
  type: ClusterIP
